vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcheaderfieldpolicy-10.warc
WARC/1.0
WARC-Type: warcinfo
WARC-Record-ID: <urn:uuid:0d5d5e9f-2222-4780-b5a4-bbcb3f28431f>
WARC-Date: 2012-05-17T00:14:47Z
Content-Length: 0
Content-Type: application/kitty
WARC-Filename: converted-IAH-20080430204825-00000-blackbook.warc

